# ttytee

./: .gitmodules  Cargo.toml  Readme.md  meson.build  meson_options.txt
src/: fakepty.c  meson.build  tee.c  tee.h  timespec_utils.c  timespec_utils.h  ttytee.c
subprojects/argparse/: meson.build
subprojects/log.c/: meson.build
